--- a/playbook.yml
+++ b/playbook.yml
@@ -3,3 +3,9 @@
   tasks:
     - name: Creates directory
       file: path=/home/ec2-user/test state=directory
+
+
+- hosts: server
+  tasks:
+    - name: Creates directory
+      file: path=/home/ec2-user/test state=directory
